@@ -52,6 +52,23 @@
       </widget>
      </item>
      <item>
+      <widget class="QPushButton" name="arduinoButton">
+       <property name="text">
+        <string>Sketch</string>
+       </property>
+       <property name="icon">
+        <iconset resource="../resources.qrc">
+         <normaloff>:/other/resources/arduino.png</normaloff>:/other/resources/arduino.png</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>31</width>
+         <height>16</height>
+        </size>
+       </property>
+      </widget>
+     </item>
+     <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
